Another small overflow fix

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -25,6 +25,6 @@ a.list-group-item:hover {
   color: black;
 }
 
-.panel-body {
+.panel-body .list-group-item {
   word-wrap: break-word;
 }
